--- a/ui/app/views/deployments/new.html
+++ b/ui/app/views/deployments/new.html
@@ -73,7 +73,75 @@
                 </div>
             </div>
         </div>
+
+        <!-- Version chooser div -->
+        <div class="col-lg-12 col-sm-12 animate-switch-container" ng-switch-when="choose-version">
+            <div class="panel panel-default">
+                <div class="panel-heading apollo-form-headline">
+                    Select version
+                </div>
+                <div class="panel-body">
+                    <div class="table-responsive">
+                        <table class="table table-hover">
+                            <thead>
+                            <tr>
+                                <th>Date</th>
+                                <th>Commit</th>
+                                <th>Message</th>
+                                <th>Author</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr ng-repeat="version in allVersions | filter:globalSearch | orderBy:'version.commit.author.date'"
+                                ng-click="setSelectedVersion(version.apollo-id)"
+                                ng-class="{'active':version.id == versionIdSelected}">
+                                <td>{{version.commit.author.date | date:'dd/MM/yy H:mm:ss'}}</td>
+                                <td><a href="{{version.html_url}}">{{version.sha | limitTo: 7}}</a></td>
+                                <td>{{version.commit.message}}</td>
+                                <td><span><img class="apollo-committer-image" src="{{version.author.avatar_url}}">{{version.author.login}}</span></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-12 col-sm-12 animate-switch-container"> <!--ng-switch-when="confirmation"-->
+            <div class="panel panel-default">
+                <div class="panel-heading apollo-form-headline">
+                    Select version
+                </div>
+                <div class="panel-body">
+                    <div class="table-responsive">
+                        <table class="table table-hover">
+                            <thead>
+                            <tr>
+                                <th>Date</th>
+                                <th>Commit</th>
+                                <th>Message</th>
+                                <th>Author</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr ng-repeat="version in allVersions | filter:globalSearch | orderBy:version.commit.author.date"
+                                ng-click="setSelectedVersion(version.id)"
+                                ng-class="{'active':version.id == versionIdSelected}">
+                                <td>{{version.commit.author.date | date:'dd/MM/yy H:mm:ss'}}</td>
+                                <td><a href="{{version.html_url}}">{{version.sha | limitTo: 7}}</a></td>
+                                <td>{{version.commit.message}}</td>
+                                <td><span><img class="apollo-committer-image" src="{{version.author.avatar_url}}">{{version.author.login}}</span></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
+
+
 
     <div class="pull-right">
         <button type="button" class="btn btn-success btn-circle btn-lg apollo-flow-button" ng-click="nextStep()">
