--- a/ui/app/views/deployments/new.html
+++ b/ui/app/views/deployments/new.html
@@ -8,7 +8,7 @@
         </div>
     </div>
 
-
+    <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="deployment-spinner"></span>
     <div class="row" ng-switch on="currentStep">
 
         <!-- Environment chooser div -->
@@ -30,8 +30,8 @@
                             </thead>
                             <tbody>
                             <tr ng-repeat="environment in allEnvironments | filter:globalSearch"
-                                ng-click="setSelectedEnvironment(environment.id)"
-                                ng-class="{'active':environment.id == environmentIdSelected}">
+                                ng-click="setSelectedEnvironment(environment)"
+                                ng-class="{'active':environment.id == environmentSelected.id}">
                                 <td>{{environment.name}}</td>
                                 <td>{{environment.geo_region}}</td>
                                 <td>{{environment.availability}}</td>
@@ -62,8 +62,8 @@
                             </thead>
                             <tbody>
                             <tr ng-repeat="service in allServices | filter:globalSearch"
-                                ng-click="setSelectedService(service.id)"
-                                ng-class="{'active':service.id == serviceIdSelected}">
+                                ng-click="setSelectedService(service)"
+                                ng-class="{'active':service.id == serviceSelected.id}">
                                 <td>{{service.name}}</td>
                                 <td>{{service.image_name}}</td>
                             </tr>
@@ -93,8 +93,8 @@
                             </thead>
                             <tbody>
                             <tr ng-repeat="version in allVersions | filter:globalSearch | orderBy:'version.commit.author.date'"
-                                ng-click="setSelectedVersion(version.apollo-id)"
-                                ng-class="{'active':version.id == versionIdSelected}">
+                                ng-click="setSelectedVersion(version)"
+                                ng-class="{'active':version.sha == versionSelected.sha}">
                                 <td>{{version.commit.author.date | date:'dd/MM/yy H:mm:ss'}}</td>
                                 <td><a href="{{version.html_url}}">{{version.sha | limitTo: 7}}</a></td>
                                 <td>{{version.commit.message}}</td>
@@ -107,44 +107,41 @@
             </div>
         </div>
 
-        <div class="col-lg-12 col-sm-12 animate-switch-container"> <!--ng-switch-when="confirmation"-->
-            <div class="panel panel-default">
-                <div class="panel-heading apollo-form-headline">
-                    Select version
-                </div>
-                <div class="panel-body">
-                    <div class="table-responsive">
-                        <table class="table table-hover">
-                            <thead>
-                            <tr>
-                                <th>Date</th>
-                                <th>Commit</th>
-                                <th>Message</th>
-                                <th>Author</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr ng-repeat="version in allVersions | filter:globalSearch | orderBy:version.commit.author.date"
-                                ng-click="setSelectedVersion(version.id)"
-                                ng-class="{'active':version.id == versionIdSelected}">
-                                <td>{{version.commit.author.date | date:'dd/MM/yy H:mm:ss'}}</td>
-                                <td><a href="{{version.html_url}}">{{version.sha | limitTo: 7}}</a></td>
-                                <td>{{version.commit.message}}</td>
-                                <td><span><img class="apollo-committer-image" src="{{version.author.avatar_url}}">{{version.author.login}}</span></td>
-                            </tr>
-                            </tbody>
-                        </table>
+        <div class="col-lg-12 col-sm-12 animate-switch-containe" ng-switch-when="confirmation">
+
+            <div class="well">
+                <h4>So just making sure</h4>
+                <p> You are going to deploy commit <b>{{versionSelected.sha}}</b><br>
+                    to service <b>{{serviceSelected.name}}</b><br>
+                    on environment <b>{{environmentSelected.name}}</b></p>
+                <br>
+                <button class="btn btn-default btn-lg center-block" data-toggle="modal" data-target="#confirm-modal">That is correct</button>
+            </div>
+
+            <div class="modal fade" id="confirm-modal" tabindex="-1" role="dialog" aria-hidden="true" style="display: none;">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                            <h4 class="modal-title" id="myModalLabel">Fashizle?</h4>
+                        </div>
+                        <div class="modal-body">
+                            Confirm here will actually deploy you commit. <br>
+                            You will be able to revert, but just be sure. <br>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="deploy()">Just deploy already!</button>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
+        </div>
     </div>
 
-
-
     <div class="pull-right">
-        <button type="button" class="btn btn-success btn-circle btn-lg apollo-flow-button" ng-click="nextStep()">
+        <button type="button" ng-if="showNextStep" class="btn btn-success btn-circle btn-lg apollo-flow-button" ng-click="nextStep()">
             <i class="fa fa-arrow-right"></i>
         </button>
     </div>
