--- a/ui/app/views/deployments/new.html
+++ b/ui/app/views/deployments/new.html
@@ -98,7 +98,7 @@
                                 <td>{{version.commit.author.date | date:'dd/MM/yy H:mm:ss'}}</td>
                                 <td><a href="{{version.html_url}}">{{version.sha | limitTo: 7}}</a></td>
                                 <td>{{version.commit.message}}</td>
-                                <td><span><img class="apollo-committer-image" src="{{version.author.avatar_url}}">{{version.author.login}}</span></td>
+                                <td><span><img class="apollo-committer-image" ng-if="version.author" src="{{version.author.avatar_url}}">{{version.author.login}}</span></td>
                             </tr>
                             </tbody>
                         </table>
