Finish new deployment screen

--- a/ui/app/styles/main.css
+++ b/ui/app/styles/main.css
@@ -105,6 +105,11 @@ background-color: #eee;
 }
 
 
+.apollo-logs {
+
+  height: 200px;
+}
+
 /* Animation stuff */
 .panel {
   overflow:hidden;
@@ -136,4 +141,39 @@ background-color: #eee;
 .animate-switch-container.ng-leave-active {
   left: -100%;
 
+}
+
+.my-deployment {
+  background-color: rgba(255, 255, 153, 0.25);
+}
+
+/* Pretty logs block */
+pre {
+    font-size: 90%;
+    line-height: 1.2em;
+    font-family: "Courier 10 Pitch", Courier, monospace;
+    white-space: pre;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -o-pre-wrap;
+
+    height:1%;
+    width: auto;
+    display: block;
+    clear: both;
+    color: #555555;
+    padding: 1em 1em;
+    margin: auto 40px auto 40px;
+    background: #f4f4f4;
+    border: solid 1px #e1e1e1
+}
+code {
+    font-size: 90%;
+    line-height: 1.2em;
+    font-family: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
+
+    display: inline;
+    color: #555555;
+    padding: 1em 1em;
+    background: #f4f4f4;
 }
