--- a/ui/app/views/blocker/configure.html
+++ b/ui/app/views/blocker/configure.html
@@ -9,7 +9,7 @@
 
     <!-- /.panel -->
     <div class="row">
-
+        <h2>Want you to have something to wait for in future versions, so no.</h2>
     </div>
     <div class="row">
 
