--- a/ui/app/views/auth/login.html
+++ b/ui/app/views/auth/login.html
@@ -2,11 +2,11 @@
     <form ng-submit="login()">
         <ng-form >
             <div class="row">
-                <div class="text-center">
+                <div class="text-center" id="apollo-login-header">
                     <p><small>Apollo, Logz.io continuous deployment.</small></p>
                     <p>Please Login</p>
                 </div>
-                <br><br>
+
                 <div class="text-center col-lg-2 col-lg-offset-5">
                     <div class="form-group">
                         <input class="form-control" type="email" placeholder="Your email@logz.io" ng-model="email" autofocus required>
